# kmeans

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  k_means_clustering.c  k_means_clustering.h  main.c  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: checks.yml  codeql-analysis.yml  docs.yml  test.yml
ci/: conda.yml  requirements-dev.txt
docs/: Makefile  c_api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  python_api.rst  quickstart.rst
examples/: main.c
extras/python-bindings/: LICENSE  kmeans.py  requirements.txt  setup.py
extras/python-bindings/requirements/: requirements-setup.txt  requirements.txt
include/: k_means_clustering.h  kmeans.h
include/kmeans/: kmeans.h
kmeans/: k_means_clustering.py  k_means_clustering_2d.c  k_means_clustering_3d.c  kmeans_2d.c  kmeans_3d.c
kmeans/core/: 2d.c  3d.c
lib/python/kmeans/: kmeans.py
lib/python/kmeans/core/: kmeans.py
python/: k_means_clustering.py  kmeans.py
source/: k_means_clustering.c
src/: 2d.c  3d.c
src/kmeans/: __init__.py  _core.py  _kmeans.c  estimator.py
tests/: test_kmeans.py
