[build-system]
requires = ["setuptools>=51.0.0", "wheel>=0.29.0"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = false
reportMissingModuleSource = false
pythonVersion = "3.8"
pythonPlatform = "Linux"

[tool.isort]
multi_line_output = 5
