[build-system]
requires = ["setuptools>=51.0.0", "wheel>=0.29.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[bdist_wheel]
universal = 1

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = false
reportMissingModuleSource = false
pythonVersion = "3.7"

[tool.pylint.master]
ignore = ["__init__.py", "__pycache__"]
jobs = 0
persistent = "yes"

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
]

[tool.isort]
multi_line_output = 5
